--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/node": "^14.6.0",
     "@types/pg": ">=6 <9",
     "chalk": "^3.0.0",
-    "chokidar": "^3.5.1",
+    "chokidar": "3.6.0",
     "json5": "^2.1.2",
     "pg": ">=6.5 <9",
     "pg-connection-string": "^2.1.0",
